--- a/config/content.htm
+++ b/config/content.htm
@@ -12,4 +12,34 @@
 <h1>Develop</h1>
 <p><a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 的開發, 可以在一個目錄中放入 cmsimde, 然後將 up_dir 中的內容放到與 cmsimde 目錄同位階的地方, 使用 command 進入 cmsimde 目錄, 執行 python wsgi.py, 就可以啟動, 以瀏覽器 https://localhost:9443 就可以連接, 以 admin 作為管理者密碼, 就可以登入維護內容.</p>
 <p>cmsimde 的開發採用 Leo Editor, 開啟 cmsimde 目錄中的 cmsimde.leo 就可以進行程式修改, 結束後, 若要保留網際內容, 只要將 cmsimde 外部的內容倒回 up_dir 目錄中即可後續對 cmsimde 遠端倉儲進行改版.</p>
-<p>init.py 位於  up_dir 目錄, 可以設定 site_title 與 uwsgi 等變數.</p>
+<p>init.py 位於  up_dir 目錄, 可以設定 site_title 與 uwsgi 等變數</p>
+<h2>開啟動態網站</h2>
+<p>Y:\&gt;cd tmp</p>
+<p>Y:\tmp&gt;cd wcmj2020</p>
+<p>Y:\tmp\wcmj2020&gt;cd cmsimde</p>
+<p>Y:\tmp\wcmj2020\cmsimde&gt;python wsgi.py</p>
+<p>關閉 : CTRL+C</p>
+<p><img alt="" height="383" src="/images/EUWk9SKUcAAFU3s.jpg" width="261"/></p>
+<h2>上課筆記</h2>
+<p><img alt="" height="701" src="/images/28445.jpg" width="527"/></p>
+<p><img alt="" height="395" src="/images/28444.jpg" width="527"/></p>
+<p><img alt="" height="934" src="/images/28446.jpg" width="527"/></p>
+<h2>繪圖程式</h2>
+<p><a href="http://mde.tw/wcmj2020/downloads/MyPaint%E7%AD%86%E5%88%B7%E8%AA%AA%E6%98%8E.pdf" title="Mypaint筆刷說明.pdf">Mypaint筆刷說明.pdf</a></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/gblZFCPOazc" width="560"></iframe></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/4iigGPzdg7s" width="560"></iframe></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/9NDuiP17GnA" width="560"></iframe></p>
+<h2>大概の上課內容</h2>
+<h3>Online education</h3>
+<p>線上直播: Youtube + Portable OBS</p>
+<p>線上開會:<span> </span><strong><a href="https://meet.google.com"></a><a href="https://meet.google.com" title="https://meet.google.com ">https://meet.google.com </a></strong></p>
+<hr/>
+<h3>讓手機可以利用電腦熱點上網</h3>
+<p><span>採用 </span><a href="https://www.tp-link.com/us/home-networking/usb-adapter/tl-wn725n/" title="https://www.tp-link.com/us/home-networking/usb-adapter/tl-wn725n/">https://www.tp-link.com/us/home-networking/usb-adapter/tl-wn725n/</a></p>
+<p><span>將此一 USB Wifi adapter 連接電腦後, 若網路為 IPv4 協定時, 可以透過"設定 -&gt; 網路和網際網路 -&gt; 行動熱點", 選擇開啟並編輯"網路名稱與網路密碼"後, 讓至多 8 台手機透過熱點連線上網.</span></p>
+<p><span>但是因為目前 Windows 10 並<a href="https://answers.microsoft.com/en-us/windows/forum/all/support-ipv6-in-mobile-hotspot-network-sharing/8801ea57-c6dc-4c10-afe6-192879a85835">未提供 IPv6 網路協定下的網路熱點功能</a><span>, 因此在純 IPv6 網路協定下無法使用"行動熱點"服務.</span></span></p>
+<hr/>
+<h3><span>利用手機鏡頭當作 webcam</span></h3>
+<p><span>Android: <a href="https://www.digitalcitizen.life/turn-android-smartphone-webcam-windows">https://www.digitalcitizen.life/turn-android-smartphone-webcam-windows</a><span> </span><br/><span>iPhone:<span> </span></span><a href="https://www.makeuseof.com/tag/use-your-iphone-as-a-webcam-heres-how-ios/">https://www.makeuseof.com/tag/use-your-iphone-as-a-webcam-heres-how-ios/</a><span> </span></span></p>
+<hr/>
+<p></p>
