--- a/content/繪圖程式.html
+++ b/content/繪圖程式.html
@@ -154,11 +154,12 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='開啟動態網站.html'>Next</a> >> 開啟動態網站<br /><h1>Develop</h1>
-<p><a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 的開發, 可以在一個目錄中放入 cmsimde, 然後將 up_dir 中的內容放到與 cmsimde 目錄同位階的地方, 使用 command 進入 cmsimde 目錄, 執行 python wsgi.py, 就可以啟動, 以瀏覽器 https://localhost:9443 就可以連接, 以 admin 作為管理者密碼, 就可以登入維護內容.</p>
-<p>cmsimde 的開發採用 Leo Editor, 開啟 cmsimde 目錄中的 cmsimde.leo 就可以進行程式修改, 結束後, 若要保留網際內容, 只要將 cmsimde 外部的內容倒回 up_dir 目錄中即可後續對 cmsimde 遠端倉儲進行改版.</p>
-<p>init.py 位於  up_dir 目錄, 可以設定 site_title 與 uwsgi 等變數</p>
-<br />About << <a href='About.html'>Previous</a> <a href='開啟動態網站.html'>Next</a> >> 開啟動態網站</div>
+    <div id="tipue_search_content">上課筆記 << <a href='上課筆記.html'>Previous</a> <a href='大概の上課內容.html'>Next</a> >> 大概の上課內容<br /><h1>繪圖程式</h1>
+<p><a href="http://mde.tw/wcmj2020/downloads/MyPaint%E7%AD%86%E5%88%B7%E8%AA%AA%E6%98%8E.pdf" title="Mypaint筆刷說明.pdf">Mypaint筆刷說明.pdf</a></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/gblZFCPOazc" width="560"></iframe></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/4iigGPzdg7s" width="560"></iframe></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/9NDuiP17GnA" width="560"></iframe></p>
+<br />上課筆記 << <a href='上課筆記.html'>Previous</a> <a href='大概の上課內容.html'>Next</a> >> 大概の上課內容</div>
         
     <!-- footer -->
       <div class="container">
