--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -42,4 +42,28 @@
 <h3><span>利用手機鏡頭當作 webcam</span></h3>
 <p><span>Android: <a href="https://www.digitalcitizen.life/turn-android-smartphone-webcam-windows">https://www.digitalcitizen.life/turn-android-smartphone-webcam-windows</a><span> </span><br/><span>iPhone:<span> </span></span><a href="https://www.makeuseof.com/tag/use-your-iphone-as-a-webcam-heres-how-ios/">https://www.makeuseof.com/tag/use-your-iphone-as-a-webcam-heres-how-ios/</a><span> </span></span></p>
 <hr/>
+<h1><span>上課內容</span></h1>
+<h2><span>w1-5</span></h2>
+<h3><span class="js-issue-title">使用 CMSiMDE</span></h3>
+<ol>
+<li><span class="js-issue-title"><span>登入 gm 帳號後, 下載 </span><a href="https://drive.google.com/open?id=1SvMKQFViJ0mskt20UhSqkjzckB3noSJH" rel="nofollow">https://drive.google.com/open?id=1SvMKQFViJ0mskt20UhSqkjzckB3noSJH</a><span><span> </span>至 downloads 目錄, 然後以 7zip 解開到 C:\wcmj2020 目錄下</span></span></li>
+<li><span class="js-issue-title"><span>其中有 start.bat 與 stop.bat</span></span><span class="js-issue-title"><span></span></span><span class="js-issue-title"><span>start.bat是開啟可攜系統</span></span><span class="js-issue-title"><span></span></span><span class="js-issue-title"><span>stop.bat是關閉<span>可攜系統</span></span></span></li>
+<li><span class="js-issue-title"><span><span>登入以個人學號所建立的 github 帳號, 然後建立 wcmj2020 倉儲.</span></span></span></li>
+<li>
+<p>將遠端的 wcmj2020 以 git clone 取下.</p>
+<p>git clone<span> </span><a href="https://github.com/%E5%AD%B8%E8%99%9F/wcmj2020.git">https://github.com/學號/wcmj2020.git</a></p>
+</li>
+<li><span>git submodule add </span><a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a><span><span> </span>cmsimde</span><span></span></li>
+<li><span>開啟編輯<span>CMSiMDE網頁:<img alt="" height="467" src="/images/jYfL3VynlT.png" width="830"/></span></span></li>
+<li><span>密碼:admin<strong></strong><strong></strong><strong></strong></span><span></span></li>
+</ol>
+<br/><span>w</span><span>6-9</span>
+<p>用 Google Meet 線上上課</p>
+<p><span>用Youtube + Portable OBS線上直播</span></p>
+<p><span>重新下載<span> </span><a href="https://drive.google.com/open?id=1xDTDfcHU18ipqZNbOufMkSZqibqNeL2T">wcmj2020_tool.7z</a></span></p>
+<p><span>學會利用 ShareX 與 OBS 拍攝螢幕操作影片</span></p>
+<p>利用手機鏡頭當作 webcam:</p>
+<p>Android:<span> </span><a href="https://www.digitalcitizen.life/turn-android-smartphone-webcam-windows">https://www.digitalcitizen.life/turn-android-smartphone-webcam-windows</a> <br/>iPhone:<span> </span><a href="https://www.makeuseof.com/tag/use-your-iphone-as-a-webcam-heres-how-ios/">https://www.makeuseof.com/tag/use-your-iphone-as-a-webcam-heres-how-ios/</a></p>
+<h2>w12-13</h2>
+<p></p>
 <p></p>
