--- a/content/利用手機鏡頭當作 webcam.html
+++ b/content/利用手機鏡頭當作 webcam.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Develop.html'>Develop</a><ul class='dropdown'><li><a href='開啟動態網站.html'>開啟動態網站</a><li><a href='上課筆記.html'>上課筆記</a><li><a href='繪圖程式.html'>繪圖程式</a><li class='has-children'><a href='大概の上課內容.html'>大概の上課內容</a><ul class='dropdown'><li><a href='Online education.html'>Online education</a><li><a href='讓手機可以利用電腦熱點上網.html'>讓手機可以利用電腦熱點上網</a><li><a href='利用手機鏡頭當作 webcam.html'>利用手機鏡頭當作 webcam</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Develop.html'>Develop</a><ul class='dropdown'><li><a href='開啟動態網站.html'>開啟動態網站</a><li><a href='上課筆記.html'>上課筆記</a><li><a href='繪圖程式.html'>繪圖程式</a><li class='has-children'><a href='大概の上課內容.html'>大概の上課內容</a><ul class='dropdown'><li><a href='Online education.html'>Online education</a><li><a href='讓手機可以利用電腦熱點上網.html'>讓手機可以利用電腦熱點上網</a><li><a href='利用手機鏡頭當作 webcam.html'>利用手機鏡頭當作 webcam</a></li></li></ul></ul><li class='has-children'><a href='上課內容.html'>上課內容</a><ul class='dropdown'><li class='has-children'><a href='w1-5.html'>w1-5</a><ul class='dropdown'><li><a href='使用 CMSiMDE.html'>使用 CMSiMDE</a></li></ul><li><a href='w12-13.html'>w12-13</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,10 +154,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">讓手機可以利用電腦熱點上網 << <a href='讓手機可以利用電腦熱點上網.html'>Previous</a> <br /><h1>利用手機鏡頭當作 webcam</h1>
+    <div id="tipue_search_content">讓手機可以利用電腦熱點上網 << <a href='讓手機可以利用電腦熱點上網.html'>Previous</a> <a href='上課內容.html'>Next</a> >> 上課內容<br /><h1>利用手機鏡頭當作 webcam</h1>
 <p><span>Android: <a href="https://www.digitalcitizen.life/turn-android-smartphone-webcam-windows">https://www.digitalcitizen.life/turn-android-smartphone-webcam-windows</a><span> </span><br/><span>iPhone:<span> </span></span><a href="https://www.makeuseof.com/tag/use-your-iphone-as-a-webcam-heres-how-ios/">https://www.makeuseof.com/tag/use-your-iphone-as-a-webcam-heres-how-ios/</a><span> </span></span></p>
 <hr/>
-<p></p><br />讓手機可以利用電腦熱點上網 << <a href='讓手機可以利用電腦熱點上網.html'>Previous</a> </div>
+<br />讓手機可以利用電腦熱點上網 << <a href='讓手機可以利用電腦熱點上網.html'>Previous</a> <a href='上課內容.html'>Next</a> >> 上課內容</div>
         
     <!-- footer -->
       <div class="container">
