--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -55,9 +55,9 @@
 </li>
 <li><span>git submodule add </span><a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a><span><span> </span>cmsimde</span><span></span></li>
 <li><span>開啟編輯<span>CMSiMDE網頁:<img alt="" height="467" src="/images/jYfL3VynlT.png" width="830"/></span></span></li>
-<li><span>密碼:admin<strong></strong><strong></strong><strong></strong></span><span></span></li>
+<li><span>密碼:admin</span></li>
 </ol>
-<br/><span>w</span><span>6-9</span>
+<h2>w6-9</h2>
 <p>用 Google Meet 線上上課</p>
 <p><span>用Youtube + Portable OBS線上直播</span></p>
 <p><span>重新下載<span> </span><a href="https://drive.google.com/open?id=1xDTDfcHU18ipqZNbOufMkSZqibqNeL2T">wcmj2020_tool.7z</a></span></p>
@@ -65,5 +65,4 @@
 <p>利用手機鏡頭當作 webcam:</p>
 <p>Android:<span> </span><a href="https://www.digitalcitizen.life/turn-android-smartphone-webcam-windows">https://www.digitalcitizen.life/turn-android-smartphone-webcam-windows</a> <br/>iPhone:<span> </span><a href="https://www.makeuseof.com/tag/use-your-iphone-as-a-webcam-heres-how-ios/">https://www.makeuseof.com/tag/use-your-iphone-as-a-webcam-heres-how-ios/</a></p>
 <h2>w12-13</h2>
-<p></p>
 <p></p>
