--- a/content/w12-13.html
+++ b/content/w12-13.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Develop.html'>Develop</a><ul class='dropdown'><li><a href='開啟動態網站.html'>開啟動態網站</a><li><a href='上課筆記.html'>上課筆記</a><li><a href='繪圖程式.html'>繪圖程式</a><li class='has-children'><a href='大概の上課內容.html'>大概の上課內容</a><ul class='dropdown'><li><a href='Online education.html'>Online education</a><li><a href='讓手機可以利用電腦熱點上網.html'>讓手機可以利用電腦熱點上網</a><li><a href='利用手機鏡頭當作 webcam.html'>利用手機鏡頭當作 webcam</a></li></li></ul></ul><li class='has-children'><a href='上課內容.html'>上課內容</a><ul class='dropdown'><li class='has-children'><a href='w1-5.html'>w1-5</a><ul class='dropdown'><li><a href='使用 CMSiMDE.html'>使用 CMSiMDE</a></li></ul><li><a href='w12-13.html'>w12-13</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Develop.html'>Develop</a><ul class='dropdown'><li><a href='開啟動態網站.html'>開啟動態網站</a><li><a href='上課筆記.html'>上課筆記</a><li><a href='繪圖程式.html'>繪圖程式</a><li class='has-children'><a href='大概の上課內容.html'>大概の上課內容</a><ul class='dropdown'><li><a href='Online education.html'>Online education</a><li><a href='讓手機可以利用電腦熱點上網.html'>讓手機可以利用電腦熱點上網</a><li><a href='利用手機鏡頭當作 webcam.html'>利用手機鏡頭當作 webcam</a></li></li></ul></ul><li class='has-children'><a href='上課內容.html'>上課內容</a><ul class='dropdown'><li class='has-children'><a href='w1-5.html'>w1-5</a><ul class='dropdown'><li><a href='使用 CMSiMDE.html'>使用 CMSiMDE</a></li></ul><li><a href='w6-9.html'>w6-9</a><li><a href='w12-13.html'>w12-13</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,9 +154,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">使用 CMSiMDE << <a href='使用 CMSiMDE.html'>Previous</a> <br /><h1>w12-13</h1>
-<p></p>
-<p></p><br />使用 CMSiMDE << <a href='使用 CMSiMDE.html'>Previous</a> </div>
+    <div id="tipue_search_content">w6-9 << <a href='w6-9.html'>Previous</a> <br /><h1>w12-13</h1>
+<p></p><br />w6-9 << <a href='w6-9.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
