--- a/content/w6-9.html
+++ b/content/w6-9.html
@@ -154,11 +154,14 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='開啟動態網站.html'>Next</a> >> 開啟動態網站<br /><h1>Develop</h1>
-<p><a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 的開發, 可以在一個目錄中放入 cmsimde, 然後將 up_dir 中的內容放到與 cmsimde 目錄同位階的地方, 使用 command 進入 cmsimde 目錄, 執行 python wsgi.py, 就可以啟動, 以瀏覽器 https://localhost:9443 就可以連接, 以 admin 作為管理者密碼, 就可以登入維護內容.</p>
-<p>cmsimde 的開發採用 Leo Editor, 開啟 cmsimde 目錄中的 cmsimde.leo 就可以進行程式修改, 結束後, 若要保留網際內容, 只要將 cmsimde 外部的內容倒回 up_dir 目錄中即可後續對 cmsimde 遠端倉儲進行改版.</p>
-<p>init.py 位於  up_dir 目錄, 可以設定 site_title 與 uwsgi 等變數</p>
-<br />About << <a href='About.html'>Previous</a> <a href='開啟動態網站.html'>Next</a> >> 開啟動態網站</div>
+    <div id="tipue_search_content">使用 CMSiMDE << <a href='使用 CMSiMDE.html'>Previous</a> <a href='w12-13.html'>Next</a> >> w12-13<br /><h1>w6-9</h1>
+<p>用 Google Meet 線上上課</p>
+<p><span>用Youtube + Portable OBS線上直播</span></p>
+<p><span>重新下載<span> </span><a href="https://drive.google.com/open?id=1xDTDfcHU18ipqZNbOufMkSZqibqNeL2T">wcmj2020_tool.7z</a></span></p>
+<p><span>學會利用 ShareX 與 OBS 拍攝螢幕操作影片</span></p>
+<p>利用手機鏡頭當作 webcam:</p>
+<p>Android:<span> </span><a href="https://www.digitalcitizen.life/turn-android-smartphone-webcam-windows">https://www.digitalcitizen.life/turn-android-smartphone-webcam-windows</a> <br/>iPhone:<span> </span><a href="https://www.makeuseof.com/tag/use-your-iphone-as-a-webcam-heres-how-ios/">https://www.makeuseof.com/tag/use-your-iphone-as-a-webcam-heres-how-ios/</a></p>
+<br />使用 CMSiMDE << <a href='使用 CMSiMDE.html'>Previous</a> <a href='w12-13.html'>Next</a> >> w12-13</div>
         
     <!-- footer -->
       <div class="container">
