--- a/content/w12-13.html
+++ b/content/w12-13.html
@@ -155,7 +155,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w6-9 << <a href='w6-9.html'>Previous</a> <br /><h1>w12-13</h1>
-<p></p><br />w6-9 << <a href='w6-9.html'>Previous</a> </div>
+<p>w</p><br />w6-9 << <a href='w6-9.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
