--- a/content/w6-9.html
+++ b/content/w6-9.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Develop.html'>Develop</a><ul class='dropdown'><li><a href='開啟動態網站.html'>開啟動態網站</a><li><a href='上課筆記.html'>上課筆記</a><li><a href='繪圖程式.html'>繪圖程式</a><li class='has-children'><a href='大概の上課內容.html'>大概の上課內容</a><ul class='dropdown'><li><a href='Online education.html'>Online education</a><li><a href='讓手機可以利用電腦熱點上網.html'>讓手機可以利用電腦熱點上網</a><li><a href='利用手機鏡頭當作 webcam.html'>利用手機鏡頭當作 webcam</a></li></li></ul></ul><li class='has-children'><a href='上課內容.html'>上課內容</a><ul class='dropdown'><li class='has-children'><a href='w1-5.html'>w1-5</a><ul class='dropdown'><li><a href='使用 CMSiMDE.html'>使用 CMSiMDE</a></li></ul><li><a href='w6-9.html'>w6-9</a><li><a href='w12-13.html'>w12-13</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Develop.html'>Develop</a><ul class='dropdown'><li class='has-children'><a href='開啟動態網站.html'>開啟動態網站</a><ul class='dropdown'><li><a href='把內容推上去.html'>把內容推上去</a></li></ul><li><a href='上課筆記.html'>上課筆記</a><li><a href='繪圖程式.html'>繪圖程式</a><li class='has-children'><a href='大概の上課內容.html'>大概の上課內容</a><ul class='dropdown'><li><a href='Online education.html'>Online education</a><li><a href='讓手機可以利用電腦熱點上網.html'>讓手機可以利用電腦熱點上網</a><li><a href='利用手機鏡頭當作 webcam.html'>利用手機鏡頭當作 webcam</a></li></li></ul></ul><li class='has-children'><a href='上課內容.html'>上課內容</a><ul class='dropdown'><li class='has-children'><a href='w1-5.html'>w1-5</a><ul class='dropdown'><li><a href='使用 CMSiMDE.html'>使用 CMSiMDE</a></li></ul><li><a href='w6-9.html'>w6-9</a><li><a href='w12-13.html'>w12-13</a><li class='has-children'><a href='w14.html'>w14</a><ul class='dropdown'><li><a href='新增 blogger 文章.html'>新增 blogger 文章</a><li><a href='編輯 Blogger 文章.html'>編輯 Blogger 文章</a></li>
                       </ul>
                 </nav>
               </div>
@@ -155,12 +155,14 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">使用 CMSiMDE << <a href='使用 CMSiMDE.html'>Previous</a> <a href='w12-13.html'>Next</a> >> w12-13<br /><h1>w6-9</h1>
-<p>用 Google Meet 線上上課</p>
-<p><span>用Youtube + Portable OBS線上直播</span></p>
-<p><span>重新下載<span> </span><a href="https://drive.google.com/open?id=1xDTDfcHU18ipqZNbOufMkSZqibqNeL2T">wcmj2020_tool.7z</a></span></p>
-<p><span>學會利用 ShareX 與 OBS 拍攝螢幕操作影片</span></p>
-<p>利用手機鏡頭當作 webcam:</p>
-<p>Android:<span> </span><a href="https://www.digitalcitizen.life/turn-android-smartphone-webcam-windows">https://www.digitalcitizen.life/turn-android-smartphone-webcam-windows</a> <br/>iPhone:<span> </span><a href="https://www.makeuseof.com/tag/use-your-iphone-as-a-webcam-heres-how-ios/">https://www.makeuseof.com/tag/use-your-iphone-as-a-webcam-heres-how-ios/</a></p>
+<ul style="list-style-type: square;">
+<li><span>學會利用 ShareX 與 OBS 拍攝螢幕操作影片</span></li>
+<li><span>重新下載<span> </span><a href="https://drive.google.com/open?id=1xDTDfcHU18ipqZNbOufMkSZqibqNeL2T">wcmj2020_tool.7z</a></span></li>
+<li><span>用Youtube + Portable OBS線上直播</span></li>
+<li>用 Google Meet 線上上課</li>
+<li>利用手機鏡頭當作 webcam:</li>
+<li>Android:<span> </span><a href="https://www.digitalcitizen.life/turn-android-smartphone-webcam-windows">https://www.digitalcitizen.life/turn-android-smartphone-webcam-windows</a> <br/>iPhone:<span> </span><a href="https://www.makeuseof.com/tag/use-your-iphone-as-a-webcam-heres-how-ios/">https://www.makeuseof.com/tag/use-your-iphone-as-a-webcam-heres-how-ios/</a></li>
+</ul>
 <br />使用 CMSiMDE << <a href='使用 CMSiMDE.html'>Previous</a> <a href='w12-13.html'>Next</a> >> w12-13</div>
         
     <!-- footer -->
