--- a/content/使用 CMSiMDE.html
+++ b/content/使用 CMSiMDE.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Develop.html'>Develop</a><ul class='dropdown'><li><a href='開啟動態網站.html'>開啟動態網站</a><li><a href='上課筆記.html'>上課筆記</a><li><a href='繪圖程式.html'>繪圖程式</a><li class='has-children'><a href='大概の上課內容.html'>大概の上課內容</a><ul class='dropdown'><li><a href='Online education.html'>Online education</a><li><a href='讓手機可以利用電腦熱點上網.html'>讓手機可以利用電腦熱點上網</a><li><a href='利用手機鏡頭當作 webcam.html'>利用手機鏡頭當作 webcam</a></li></li></ul></ul><li class='has-children'><a href='上課內容.html'>上課內容</a><ul class='dropdown'><li class='has-children'><a href='w1-5.html'>w1-5</a><ul class='dropdown'><li><a href='使用 CMSiMDE.html'>使用 CMSiMDE</a></li></ul><li><a href='w6-9.html'>w6-9</a><li><a href='w12-13.html'>w12-13</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Develop.html'>Develop</a><ul class='dropdown'><li class='has-children'><a href='開啟動態網站.html'>開啟動態網站</a><ul class='dropdown'><li><a href='把內容推上去.html'>把內容推上去</a></li></ul><li><a href='上課筆記.html'>上課筆記</a><li><a href='繪圖程式.html'>繪圖程式</a><li class='has-children'><a href='大概の上課內容.html'>大概の上課內容</a><ul class='dropdown'><li><a href='Online education.html'>Online education</a><li><a href='讓手機可以利用電腦熱點上網.html'>讓手機可以利用電腦熱點上網</a><li><a href='利用手機鏡頭當作 webcam.html'>利用手機鏡頭當作 webcam</a></li></li></ul></ul><li class='has-children'><a href='上課內容.html'>上課內容</a><ul class='dropdown'><li class='has-children'><a href='w1-5.html'>w1-5</a><ul class='dropdown'><li><a href='使用 CMSiMDE.html'>使用 CMSiMDE</a></li></ul><li><a href='w6-9.html'>w6-9</a><li><a href='w12-13.html'>w12-13</a><li class='has-children'><a href='w14.html'>w14</a><ul class='dropdown'><li><a href='新增 blogger 文章.html'>新增 blogger 文章</a><li><a href='編輯 Blogger 文章.html'>編輯 Blogger 文章</a></li>
                       </ul>
                 </nav>
               </div>
@@ -155,7 +155,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w1-5 << <a href='w1-5.html'>Previous</a> <a href='w6-9.html'>Next</a> >> w6-9<br /><h1>使用 CMSiMDE</h1>
-<ol>
+<ul style="list-style-type: square;">
 <li><span class="js-issue-title"><span>登入 gm 帳號後, 下載 </span><a href="https://drive.google.com/open?id=1SvMKQFViJ0mskt20UhSqkjzckB3noSJH" rel="nofollow">https://drive.google.com/open?id=1SvMKQFViJ0mskt20UhSqkjzckB3noSJH</a><span><span> </span>至 downloads 目錄, 然後以 7zip 解開到 C:\wcmj2020 目錄下</span></span></li>
 <li><span class="js-issue-title"><span>其中有 start.bat 與 stop.bat</span></span><span class="js-issue-title"><span></span></span><span class="js-issue-title"><span>start.bat是開啟可攜系統</span></span><span class="js-issue-title"><span></span></span><span class="js-issue-title"><span>stop.bat是關閉<span>可攜系統</span></span></span></li>
 <li><span class="js-issue-title"><span><span>登入以個人學號所建立的 github 帳號, 然後建立 wcmj2020 倉儲.</span></span></span></li>
@@ -166,7 +166,7 @@ img.add_border {
 <li><span>git submodule add </span><a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a><span><span> </span>cmsimde</span><span></span></li>
 <li><span>開啟編輯<span>CMSiMDE網頁:<img alt="" height="467" src="./../images/jYfL3VynlT.png" width="830"/></span></span></li>
 <li><span>密碼:admin</span></li>
-</ol>
+</ul>
 <br />w1-5 << <a href='w1-5.html'>Previous</a> <a href='w6-9.html'>Next</a> >> w6-9</div>
         
     <!-- footer -->
