--- a/content/把內容推上去.html
+++ b/content/把內容推上去.html
@@ -154,19 +154,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w6-9 << <a href='w6-9.html'>Previous</a> <a href='w14.html'>Next</a> >> w14<br /><h1>w12-13</h1>
-<ul style="list-style-type: square;">
-<li><span>安裝 </span><span>google-api-python-client 與 oauth2client</span></li>
-<li>
-<p>完成 client_secrets.json 設定後, 必須將檔案存在倉儲目錄外部</p>
-<p>將 client_secrets.json 轉為 credential_token.dat 的程式</p>
-</li>
-<li>學會用leo</li>
-<li>設定 <span>add_to_blogger 和 edit_to_blogger 按鈕</span><span></span></li>
-<li><span>使用Google Blogger</span></li>
-<li><span>Google Blogger 中的網誌系統都有獨立 ID, 稱為 blog_id, 而網誌中的每一篇文章也有獨立 ID, </span><span>稱為 post_id</span><span></span></li>
-</ul>
-<br />w6-9 << <a href='w6-9.html'>Previous</a> <a href='w14.html'>Next</a> >> w14</div>
+    <div id="tipue_search_content">開啟動態網站 << <a href='開啟動態網站.html'>Previous</a> <a href='上課筆記.html'>Next</a> >> 上課筆記<br /><h1>把內容推上去</h1>
+<p><img alt="" height="480" src="./../images/n.jpg" width="615"/></p>
+<br />開啟動態網站 << <a href='開啟動態網站.html'>Previous</a> <a href='上課筆記.html'>Next</a> >> 上課筆記</div>
         
     <!-- footer -->
       <div class="container">
