--- a/content/w14.html
+++ b/content/w14.html
@@ -154,19 +154,13 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w6-9 << <a href='w6-9.html'>Previous</a> <a href='w14.html'>Next</a> >> w14<br /><h1>w12-13</h1>
+    <div id="tipue_search_content">w12-13 << <a href='w12-13.html'>Previous</a> <a href='新增 blogger 文章.html'>Next</a> >> 新增 blogger 文章<br /><h1>w14</h1>
 <ul style="list-style-type: square;">
-<li><span>安裝 </span><span>google-api-python-client 與 oauth2client</span></li>
-<li>
-<p>完成 client_secrets.json 設定後, 必須將檔案存在倉儲目錄外部</p>
-<p>將 client_secrets.json 轉為 credential_token.dat 的程式</p>
-</li>
-<li>學會用leo</li>
-<li>設定 <span>add_to_blogger 和 edit_to_blogger 按鈕</span><span></span></li>
-<li><span>使用Google Blogger</span></li>
-<li><span>Google Blogger 中的網誌系統都有獨立 ID, 稱為 blog_id, 而網誌中的每一篇文章也有獨立 ID, </span><span>稱為 post_id</span><span></span></li>
+<li><span>安裝 Python 3.8.3 與 pip</span></li>
+<li><span>安裝 Git</span></li>
+<li>安裝 CMSiMDE 所需模組</li>
 </ul>
-<br />w6-9 << <a href='w6-9.html'>Previous</a> <a href='w14.html'>Next</a> >> w14</div>
+<br />w12-13 << <a href='w12-13.html'>Previous</a> <a href='新增 blogger 文章.html'>Next</a> >> 新增 blogger 文章</div>
         
     <!-- footer -->
       <div class="container">
