--- a/content/開啟動態網站.html
+++ b/content/開啟動態網站.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Develop.html'>Develop</a><ul class='dropdown'><li><a href='開啟動態網站.html'>開啟動態網站</a><li><a href='上課筆記.html'>上課筆記</a><li><a href='繪圖程式.html'>繪圖程式</a><li class='has-children'><a href='大概の上課內容.html'>大概の上課內容</a><ul class='dropdown'><li><a href='Online education.html'>Online education</a><li><a href='讓手機可以利用電腦熱點上網.html'>讓手機可以利用電腦熱點上網</a><li><a href='利用手機鏡頭當作 webcam.html'>利用手機鏡頭當作 webcam</a></li></li></ul></ul><li class='has-children'><a href='上課內容.html'>上課內容</a><ul class='dropdown'><li class='has-children'><a href='w1-5.html'>w1-5</a><ul class='dropdown'><li><a href='使用 CMSiMDE.html'>使用 CMSiMDE</a></li></ul><li><a href='w6-9.html'>w6-9</a><li><a href='w12-13.html'>w12-13</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Develop.html'>Develop</a><ul class='dropdown'><li class='has-children'><a href='開啟動態網站.html'>開啟動態網站</a><ul class='dropdown'><li><a href='把內容推上去.html'>把內容推上去</a></li></ul><li><a href='上課筆記.html'>上課筆記</a><li><a href='繪圖程式.html'>繪圖程式</a><li class='has-children'><a href='大概の上課內容.html'>大概の上課內容</a><ul class='dropdown'><li><a href='Online education.html'>Online education</a><li><a href='讓手機可以利用電腦熱點上網.html'>讓手機可以利用電腦熱點上網</a><li><a href='利用手機鏡頭當作 webcam.html'>利用手機鏡頭當作 webcam</a></li></li></ul></ul><li class='has-children'><a href='上課內容.html'>上課內容</a><ul class='dropdown'><li class='has-children'><a href='w1-5.html'>w1-5</a><ul class='dropdown'><li><a href='使用 CMSiMDE.html'>使用 CMSiMDE</a></li></ul><li><a href='w6-9.html'>w6-9</a><li><a href='w12-13.html'>w12-13</a><li class='has-children'><a href='w14.html'>w14</a><ul class='dropdown'><li><a href='新增 blogger 文章.html'>新增 blogger 文章</a><li><a href='編輯 Blogger 文章.html'>編輯 Blogger 文章</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,14 +154,14 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Develop << <a href='Develop.html'>Previous</a> <a href='上課筆記.html'>Next</a> >> 上課筆記<br /><h1>開啟動態網站</h1>
+    <div id="tipue_search_content">Develop << <a href='Develop.html'>Previous</a> <a href='把內容推上去.html'>Next</a> >> 把內容推上去<br /><h1>開啟動態網站</h1>
 <p>Y:\&gt;cd tmp</p>
 <p>Y:\tmp&gt;cd wcmj2020</p>
 <p>Y:\tmp\wcmj2020&gt;cd cmsimde</p>
 <p>Y:\tmp\wcmj2020\cmsimde&gt;python wsgi.py</p>
 <p>關閉 : CTRL+C</p>
 <p><img alt="" height="383" src="./../images/EUWk9SKUcAAFU3s.jpg" width="261"/></p>
-<br />Develop << <a href='Develop.html'>Previous</a> <a href='上課筆記.html'>Next</a> >> 上課筆記</div>
+<br />Develop << <a href='Develop.html'>Previous</a> <a href='把內容推上去.html'>Next</a> >> 把內容推上去</div>
         
     <!-- footer -->
       <div class="container">
