--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -20,7 +20,7 @@
 <p>Y:\tmp\wcmj2020\cmsimde&gt;python wsgi.py</p>
 <p>關閉 : CTRL+C</p>
 <p><img alt="" height="383" src="/images/EUWk9SKUcAAFU3s.jpg" width="261"/></p>
-<h3>把內容推上去:</h3>
+<h3>把內容推上去</h3>
 <p><img alt="" height="480" src="/images/n.jpg" width="615"/></p>
 <h2>上課筆記</h2>
 <p><img alt="" height="701" src="/images/28445.jpg" width="527"/></p>
@@ -148,7 +148,8 @@ except(client.AccessTokenRefreshError):
 <p></p>
 <div>
 <div class="syntaxhighlighter py"></div>
-</div><h3>編輯 Blogger 文章</h3>
+</div>
+<h3>編輯 Blogger 文章</h3>
 <h4>w14_blogger_edit_1.py</h4>
 <pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">'''
 用來測試 Google Blogger Python API 編輯文章程式
