--- a/config/content.htm
+++ b/config/content.htm
@@ -34,16 +34,14 @@
 <h2>大概の上課內容</h2>
 <h3>Online education</h3>
 <p>線上直播: Youtube + Portable OBS</p>
-<p>線上開會:<span> </span><strong><a href="https://meet.google.com"></a><a href="https://meet.google.com" title="https://meet.google.com ">https://meet.google.com </a></strong></p>
-<hr/>
+<p>線上開會:<span> </span><strong><a href="https://meet.google.com"></a><a href="https://meet.google.com" title="https://meet.google.com ">https://meet.google.com</a></strong></p>
 <h3>讓手機可以利用電腦熱點上網</h3>
 <p><span>採用 </span><a href="https://www.tp-link.com/us/home-networking/usb-adapter/tl-wn725n/" title="https://www.tp-link.com/us/home-networking/usb-adapter/tl-wn725n/">https://www.tp-link.com/us/home-networking/usb-adapter/tl-wn725n/</a></p>
 <p><span>將此一 USB Wifi adapter 連接電腦後, 若網路為 IPv4 協定時, 可以透過"設定 -&gt; 網路和網際網路 -&gt; 行動熱點", 選擇開啟並編輯"網路名稱與網路密碼"後, 讓至多 8 台手機透過熱點連線上網.</span></p>
 <p><span>但是因為目前 Windows 10 並<a href="https://answers.microsoft.com/en-us/windows/forum/all/support-ipv6-in-mobile-hotspot-network-sharing/8801ea57-c6dc-4c10-afe6-192879a85835">未提供 IPv6 網路協定下的網路熱點功能</a><span>, 因此在純 IPv6 網路協定下無法使用"行動熱點"服務.</span></span></p>
-<hr/>
 <h3>利用手機鏡頭當作 webcam</h3>
-<p><span>Android: <a href="https://www.digitalcitizen.life/turn-android-smartphone-webcam-windows">https://www.digitalcitizen.life/turn-android-smartphone-webcam-windows</a><span> </span><br/><span>iPhone:<span> </span></span><a href="https://www.makeuseof.com/tag/use-your-iphone-as-a-webcam-heres-how-ios/">https://www.makeuseof.com/tag/use-your-iphone-as-a-webcam-heres-how-ios/</a><span> </span></span></p>
-<hr/>
+<p>Android: <a href="https://www.digitalcitizen.life/turn-android-smartphone-webcam-windows">https://www.digitalcitizen.life/turn-android-smartphone-webcam-windows</a> <br/>iPhone: <a href="https://www.makeuseof.com/tag/use-your-iphone-as-a-webcam-heres-how-ios/">https://www.makeuseof.com/tag/use-your-iphone-as-a-webcam-heres-how-ios/</a> </p>
+<p></p>
 <h1>上課內容</h1>
 <h2>w1-5</h2>
 <h3>使用 CMSiMDE</h3>
@@ -146,9 +144,6 @@ except(client.AccessTokenRefreshError):
     print("error")
 </pre>
 <p></p>
-<div>
-<div class="syntaxhighlighter py"></div>
-</div>
 <h3>編輯 Blogger 文章</h3>
 <h4>w14_blogger_edit_1.py</h4>
 <pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">'''
