--- a/content/利用手機鏡頭當作 webcam.html
+++ b/content/利用手機鏡頭當作 webcam.html
@@ -155,8 +155,8 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">讓手機可以利用電腦熱點上網 << <a href='讓手機可以利用電腦熱點上網.html'>Previous</a> <a href='上課內容.html'>Next</a> >> 上課內容<br /><h1>利用手機鏡頭當作 webcam</h1>
-<p><span>Android: <a href="https://www.digitalcitizen.life/turn-android-smartphone-webcam-windows">https://www.digitalcitizen.life/turn-android-smartphone-webcam-windows</a><span> </span><br/><span>iPhone:<span> </span></span><a href="https://www.makeuseof.com/tag/use-your-iphone-as-a-webcam-heres-how-ios/">https://www.makeuseof.com/tag/use-your-iphone-as-a-webcam-heres-how-ios/</a><span> </span></span></p>
-<hr/>
+<p>Android: <a href="https://www.digitalcitizen.life/turn-android-smartphone-webcam-windows">https://www.digitalcitizen.life/turn-android-smartphone-webcam-windows</a> <br/>iPhone: <a href="https://www.makeuseof.com/tag/use-your-iphone-as-a-webcam-heres-how-ios/">https://www.makeuseof.com/tag/use-your-iphone-as-a-webcam-heres-how-ios/</a> </p>
+<p></p>
 <br />讓手機可以利用電腦熱點上網 << <a href='讓手機可以利用電腦熱點上網.html'>Previous</a> <a href='上課內容.html'>Next</a> >> 上課內容</div>
         
     <!-- footer -->
