--- a/config/content.htm
+++ b/config/content.htm
@@ -31,7 +31,7 @@
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/gblZFCPOazc" width="560"></iframe></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/4iigGPzdg7s" width="560"></iframe></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/9NDuiP17GnA" width="560"></iframe></p>
-<h2>大概の上課內容</h2>
+<h2>大概的上課內容</h2>
 <h3>Online education</h3>
 <p>線上直播: Youtube + Portable OBS</p>
 <p>線上開會:<span> </span><strong><a href="https://meet.google.com"></a><a href="https://meet.google.com" title="https://meet.google.com ">https://meet.google.com</a></strong></p>
